Server repository, service and controller with tests
